--- a/project03/report/project03.tex
+++ b/project03/report/project03.tex
@@ -58,13 +58,15 @@ and initial conditions is a circle of radius $1/8$ at the lower left quadrant th
 \section{Task: Implementing the linear algebra functions and the stencil
          operators [40 Points]}
 
-The first part of the project is to implement the linear algebra functions and
+The first part of the project consists in implementing the linear algebra functions and
 the stencil operators. The linear algebra functions are implemented in the
-\texttt{linalg.cpp} file. As first try, I implementd all the functions using
-simple loops. I tried using iterators but since the Fields class is a coustom
-class, I decided to put that idea on hold until I have a better understanding of
-the code. On the other hand, the stencil operators are implemented in the
-\texttt{operators.cpp}. Writing the interior grid points was very simple since
+\texttt{linalg.cpp} file. I implemented all the functions using
+simple loops.
+%  I tried using iterators but since the Fields class is a custom
+% class, I decided to put that idea on hold until I have a better understanding of
+% the code. 
+Similarly, the stencil operators were implemented in the
+\texttt{operators.cpp} file. Writing the interior grid points was very simple since
 we already had the implementations for the boundary conditions.
 
 Afterwards, I ran the code following the indications on the project description
@@ -109,9 +111,87 @@ which produced Fig. \ref{im:final_time}.
 \end{figure}
 
 \section{Task:  Adding OpenMP to the nonlinear PDE mini-app [60 Points]}
-This section is dedicated to parallelizing the code using OpenMP. The first step
-was to parallelize the linear algebra functions. I used the \texttt{omp
-parallel for} directive to parallelize the loops. The stencil operators were
+This section is dedicated to parallelizing the code using OpenMP. 
+
+\subsection*{Welcome message and serial compilation}
+We want to have different welcome messages for the serial and parallel versions.
+This was done using the macro \texttt{\_OPENMP} which is defined when OpenMP is
+enabled. The code is shown below.
+\begin{cppverbatim}
+#ifdef _OPENMP
+#include "omp.h" // This line won't add the library if you don't compile with -fopenmp option.
+#endif
+
+...
+
+#ifdef _OPENMP
+    std::cout << "version   :: C++ OpenMP" << std::endl;
+#pragma omp parallel
+    {
+        threads = omp_get_num_threads();
+    }
+    std::cout << "threads   :: " << threads << std::endl;
+#else
+    std::cout << "version   :: C++ Serial" << std::endl;
+#endif
+\end{cppverbatim}    
+This seems to work as expected. The code is compiled with the \texttt{-fopenmp}
+flag to enable OpenMP.
+
+\subsection*{Linear algebra kernel}
+Afterwards, the first step to parallelize the code was to work on the linear algebra functions. I used simple \texttt{omp
+parallel for} directive to parallelize the loops.
+
+\subsection*{The diffusion stencil}
+Then, I parallelized the
+stencil operators. I used the same directive as before. 
+
+\subsection*{Bitwise identical results}
+I converted the bin files to hex files to be able to see clearly if the parallel
+implementation was producing bitwise identical results. The reults was that they
+were not identical.
+
+TODO: Discuss
+
+\subsection*{Strong scaling}
+Next, we want to analyze the performance of the code. We will analyze the strong
+and weak scaling of the code. I repeated the runs 100 times for the serial and
+50 for the parallel
+versions to get better timing results.
+It was a bit challenging to be able to determine the run time for certain using
+only one run, since there seemed to be a lot of variability in the run times.
+The codes to compile and run the experiments are included in the bash scripts
+accompanying this report. We can see the distribution of the run times in Fig. \ref{im:times}.
+\begin{figure}
+    \centering
+    \includegraphics[width=\textwidth]{../mini_app/data_var.pdf}
+    \caption{Time taken for the serial and parallel versions of the code; zero threads indicates serial version.}
+    \label{im:times}
+\end{figure}
+Since the run times are so variable, I decided to use the median of the run
+times
+to determine the run time for the strong and weak scaling experiments. The
+results
+are shown in Figs. \ref{im:strong_scaling}
+\begin{figure}
+    \centering
+    \includegraphics[width=\textwidth]{../mini_app/strong_scaling_plot.pdf}
+    \caption{Strong scaling of the code.}
+    \label{im:strong_scaling}
+\end{figure}
+
+\subsection*{Weak scaling}
+For the weak scaling, I ran the code for the parallel verison 100 times for each
+combination of threads and grid size. The results are shown in Fig.
+\ref{im:weak_scaling}. I followed the same procedure as for the strong scaling
+to determine the run time.
+
+\begin{figure}
+    \centering
+    \includegraphics[width=\textwidth]{../mini_app/weak_scaling_plot.pdf}
+    \caption{Weak scaling of the code.}
+    \label{im:weak_scaling}
+\end{figure}
 
 
 \end{document}
