--- a/project03/report/project03.tex
+++ b/project03/report/project03.tex
@@ -111,7 +111,9 @@ the lower left quadrant of the domain, which is matching with the initial condit
 Fig. \ref{im:final_time} shows the results corresponding to a run with a $1024 \times 1024$ grid.
 
 \section{Task:  Adding OpenMP to the nonlinear PDE mini-app [60 Points]}
-This section is dedicated to parallelizing the code using OpenMP. 
+This section is dedicated to parallelizing the code using OpenMP and analyzing
+the performance of the code, as well as some discussion regarding the results
+and differences between the serial and parallel versions.
 
 \subsection*{Welcome message and serial compilation}
 We want to have different welcome messages for the serial and parallel versions.
@@ -156,11 +158,11 @@ diffusion.
 % What role do the boundary loops play?
 
 \subsection*{Bitwise identical results}\label{sec:bitwise}
-I converted the \textbf{bin} files to \textbf{hex} files to be able to see clearly if the parallel
+I converted the \texttt{bin} files to \texttt{hex} files to be able to see clearly if the parallel
 implementation was producing bitwise identical results. The reults were that they
 were not identical. The main reson is that floating
 point operations are not associative, and the order of the operations can change
-the results. This is influences some calculations such as the dot product
+the results. This is influences some calculations such as the norm and the dot product
 between two vectors. 
 Another reason I thought initially may interfere was the implementation of the diffusion
 stencil, but upon further inspection, I realized that the update is using the
@@ -168,11 +170,12 @@ stencil, but upon further inspection, I realized that the update is using the
 stencil operation and therefore should not be affected by the parallelization.
 
 In my opinion, in order to get bitwise identical results, one
-would need to parallelize instead by splitting the grid into chunks and then use
+would need to parallelize instead by splitting the grid into chunks depending on
+the number of threads and then use
 ghost cells to communicate the boundary conditions. This would be a more complex
 implementation, but it should be able to produce bitwise identical results. This
-would then require for some synchronization between the threads to make sure
-that the boundary conditions are correctly applied. Also, some directives like
+would also require for some synchronization between the threads to make sure
+that the boundary conditions are correctly applied. Also, directives like
 the \texttt{reduction} should be avoided.
 
 % Argue if your threaded OpenMP PDE solver can be implemented so that it produces bitwise-identical
@@ -189,7 +192,7 @@ It was a bit challenging to be able to determine the run time for certain using
 only one run, since there seemed to be a lot of variability in the run times.
 The codes to compile and run the experiments are included in the bash scripts
 accompanying this report. We can see the distribution of the run times in Fig. \ref{im:times}.
-\begin{figure}
+\begin{figure}[!h]
     \centering
     \includegraphics[width=\textwidth]{../mini_app/data_var.pdf}
     \caption{Time taken for the serial and parallel versions of the code; zero threads indicates serial version.}
@@ -205,7 +208,7 @@ threads on a $64\times64$ grid which seems to have very high run times compared
 to the other cases. I wonder if this has something to do with hardware.
 
 The results of the strong scaling are shown in Fig. \ref{im:strong_scaling}
-\begin{figure}
+\begin{figure}[!h]
     \centering
     \includegraphics[width=\textwidth]{../mini_app/strong_scaling_plot.pdf}
     \caption{Strong scaling of the code.}
@@ -228,7 +231,7 @@ Following the previous analysis of run times, I again
 used the median as representative. 
 The results are shown in Fig. \ref{im:weak_scaling}.
 
-\begin{figure}
+\begin{figure}[!h]
     \centering
     \includegraphics[width=\textwidth]{../mini_app/weak_scaling_plot.pdf}
     \caption{Weak scaling of the code.}
