--- a/project04/report/project04.tex
+++ b/project04/report/project04.tex
@@ -210,7 +210,8 @@ reported value is the mean of fifty runs. We can see that the strong scaling
 presents a more than linear speedup, which is odd. This could be attributted to
 the overhead of the communication between the processes when not comparing against
 the naive implementation. For some reason, this is not present in the run over
-multiple cores. 
+multiple cores. Nevertheless, the weak scaling shows a good performance in all
+number of processes.
 
 \begin{figure}[h!]
     \centering
